--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "localforage": "^1.7.3",
     "vue": "^2.6.11"
   },
   "devDependencies": {
